--- a/style.css
+++ b/style.css
@@ -12,11 +12,31 @@
   width: 100%;
 }
 
-body,
-html {
-  /* overflow-x: hidden; */
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
+
+.container_nav {
+    flex-direction: row !important;
+}
+
+
+
+.navbar-brand {
+    /* color: rgb(5, 5, 82); */
+    font-weight: 900;
+    margin-right: 50px;
+    color: #0624b8;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.navbar .nav-link{
+    color: #fff
+}
 nav .navbar-collapse {
   justify-content: flex-end !important;
 }
@@ -50,7 +70,7 @@ nav .container-fluid {
 .add_more_students {
   position: absolute;
   right: -25px;
-  bottom: -10px;
+  bottom: -20px;
   width: 30px;
   height: 30px;
   border-radius: 50%; /* Makes the button circular */
@@ -61,6 +81,11 @@ nav .container-fluid {
   justify-content: center;
   align-items: center;
   text-decoration: none; /* Remove default underline */
+}
+
+.form-label{
+    text-align: left !important;
+    width: 100%;
 }
 
 /* grouping links */
@@ -76,6 +101,7 @@ nav .container-fluid {
 
 #noteBug {
   font-size: 0.9rem;
+  color: red;
 }
 
 /* displaying groups */
@@ -99,8 +125,9 @@ nav .container-fluid {
   margin-top: 20px;
   display: flex;
   justify-content: center;
+  
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 20px;
 }
 
 .group {
@@ -146,12 +173,12 @@ nav .container-fluid {
 }
 
 body {
-  height: 100dvh;
+  /* height: 100dvh; */
   width: 100%;
-  background-image: url(./bakcground.png);
+  /* background-image: url(./bakcground.png);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: center; */
 }
 
 .holder {
@@ -200,14 +227,63 @@ nav {
 nav {
     position: fixed !important;
     /* width: 100%; */
+    max-width: 960px;
     top: 0;
+    left: auto;
     text-align: center;
     z-index: 1000;
     transition: all 0.3s ease-in-out;
-    margin: 10px auto !important;
+    margin: 10px  !important;
+   
   }
 
 
   body{
-    min-width: 700px;
+    min-width: 420px !important;
+    
   }
+
+  body {
+    background: linear-gradient(to right, rgba(255, 127, 95, 0.708), rgba(254, 180, 123, 0.702),rgba(255, 127, 95, 0.708), rgba(254, 180, 123, 0.702),rgba(255, 127, 95, 0.708), rgba(254, 180, 123, 0.702)); 
+} 
+
+.grouping .form-label{
+    text-align: center !important;
+}
+
+  .option {
+    margin-top: 80px;
+    min-width: 450px;
+  }
+
+
+  .aboutUs{
+    margin-top: 100px;
+    padding: 0 5px;
+  }
+
+  .aboutUs h2{
+    font-size: 1.5rem;
+  }
+
+.option p{
+    text-align: center;
+}
+
+
+
+.holder .intro, .add_students{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.3rem;
+    font-family: "Madimi One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+  
+
+.opt_button{
+justify-content: center;
+}
+
