--- a/style.css
+++ b/style.css
@@ -291,3 +291,11 @@ nav {
 justify-content: center;
 }
 
+
+.group_us_image{
+  background: url(./favicon-16x16.png);
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
