--- a/style.css
+++ b/style.css
@@ -293,11 +293,6 @@ body {
 }
 
 
-
-
-
-
-
 .grouping .form-label {
   text-align: center !important;
 }
@@ -343,3 +338,22 @@ body {
 
 
 
+
+/* styling input */
+
+
+.input_holder input{
+  border: 2px dotted rgba(255, 127, 95, 100%);
+
+  height: 10px !important;
+  width:300px;
+  
+
+  display: flex;
+  align-self: center;
+  text-align: center;
+  margin: 0 auto;
+  padding: 55px 30px;
+  border-radius: 12px;
+  
+}
